@@ -1,3 +1,4 @@
+* Add notification message
 * Add validate_fields to ModelStorage
 * Drop support for PyPy and psycopg2cffi
 * Use a set for field's depends
